--- a/views/forms/jobPosition.ejs
+++ b/views/forms/jobPosition.ejs
@@ -35,7 +35,7 @@
                     </div>
                 <% } %>
 
-                <form method="POST" action="/job-position/add" class="form">
+                <form method="POST" action="/jobPosition/add" class="form">
                     <div class="form-group">
                         <label for="jobTitle">Job Title *</label>
                         <input 
