--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,8 +25,8 @@
             <div class="home-card">
                 <h3>Job Position</h3>
                 <p>Manage job titles and salary ranges</p>
-                <a href="/job-position/add" class="btn-primary">Add Job Position</a>
-                <a href="/job-position/view" class="btn-view" style="margin-left: 5px;">View All</a>
+                <a href="/jobPosition/add" class="btn-primary">Add Job Position</a>
+                <a href="/jobPosition/view" class="btn-view" style="margin-left: 5px;">View All</a>
             </div>
 
             <!-- Department -->
@@ -57,8 +57,8 @@
             <div class="home-card">
                 <h3>Leave Request</h3>
                 <p>Track employee leave applications</p>
-                <a href="/leave-request/add" class="btn-primary">Add Leave Request</a>
-                <a href="/leave-request/view" class="btn-view" style="margin-left: 5px;">View All</a>
+                <a href="/leaveRequest/add" class="btn-primary">Add Leave Request</a>
+                <a href="/leaveRequest/view" class="btn-view" style="margin-left: 5px;">View All</a>
             </div>
 
             <!-- Payroll -->
@@ -89,8 +89,8 @@
             <div class="home-card">
                 <h3>Employee Training</h3>
                 <p>Enroll employees in training sessions</p>
-                <a href="/employee-training/add" class="btn-primary">Add Employee Training</a>
-                <a href="/employee-training/view" class="btn-view" style="margin-left: 5px;">View All</a>
+                <a href="/employeeTraining/add" class="btn-primary">Add Employee Training</a>
+                <a href="/employeeTraining/view" class="btn-view" style="margin-left: 5px;">View All</a>
             </div>
 
         </div>
