--- a/views/view/attendances.ejs
+++ b/views/view/attendances.ejs
@@ -11,7 +11,7 @@
         <h1>All Attendance Records</h1>
         
         <div class="button-group">
-            <a href="/forms/attendance" class="btn-primary">Add New Attendance</a>
+            <a href="/attendance/add" class="btn-primary">Add New Attendance</a>
             <a href="/" class="btn-secondary">Back to Home</a>
         </div>
         
