--- a/views/view/employeeDetails.ejs
+++ b/views/view/employeeDetails.ejs
@@ -71,9 +71,9 @@
         </div>
         
         <div class="button-group">
-            <a href="/employees/<%= employee.EmployeeID %>/edit" class="btn-primary">Edit</a>
-            <a href="/employees/<%= employee.EmployeeID %>/delete" class="btn-delete">Delete</a>
-            <a href="/employees" class="btn-secondary">Back to List</a>
+            <a href="/employee/<%= employee.EmployeeID %>/edit" class="btn-primary">Edit</a>
+            <a href="/employee/<%= employee.EmployeeID %>/delete" class="btn-delete">Delete</a>
+            <a href="/employee" class="btn-secondary">Back to List</a>
         </div>
     </div>
 </body>
