--- a/views/view/employeeTrainingDelete.ejs
+++ b/views/view/employeeTrainingDelete.ejs
@@ -36,11 +36,11 @@
             </div>
         </div>
         
-        <form action="/employee-training/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/delete" method="POST">
+        <form action="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/delete" method="POST">
             <div class="button-group">
                 <button type="submit" class="btn-delete">Confirm Delete</button>
-                <a href="/employee-training/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>" class="btn-secondary">Cancel</a>
-                <a href="/employee-training" class="btn-secondary">Back to List</a>
+                <a href="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>" class="btn-secondary">Cancel</a>
+                <a href="/employeeTraining" class="btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
