--- a/views/view/employeeTrainingDetails.ejs
+++ b/views/view/employeeTrainingDetails.ejs
@@ -56,9 +56,9 @@
         </div>
         
         <div class="button-group">
-            <a href="/employee-training/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/edit" class="btn-primary">Edit</a>
-            <a href="/employee-training/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/delete" class="btn-delete">Delete</a>
-            <a href="/employee-training" class="btn-secondary">Back to List</a>
+            <a href="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/edit" class="btn-primary">Edit</a>
+            <a href="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/delete" class="btn-delete">Delete</a>
+            <a href="/employeeTraining" class="btn-secondary">Back to List</a>
         </div>
     </div>
 </body>
