--- a/views/view/trainingDetails.ejs
+++ b/views/view/trainingDetails.ejs
@@ -38,9 +38,9 @@
         </div>
         
         <div class="button-group">
-            <a href="/trainings/<%= training.TrainingID %>/edit" class="btn-primary">Edit</a>
-            <a href="/trainings/<%= training.TrainingID %>/delete" class="btn-delete">Delete</a>
-            <a href="/trainings" class="btn-secondary">Back to List</a>
+            <a href="/training<%= training.TrainingID %>/edit" class="btn-primary">Edit</a>
+            <a href="/training<%= training.TrainingID %>/delete" class="btn-delete">Delete</a>
+            <a href="/training" class="btn-secondary">Back to List</a>
         </div>
     </div>
 </body>
