--- a/views/forms/employeeTrainingEdit.ejs
+++ b/views/forms/employeeTrainingEdit.ejs
@@ -14,7 +14,7 @@
             <div class="error-message"><%= error %></div>
         <% } %>
         
-        <form action="/employee-training/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/edit" method="POST">
+        <form action="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/edit" method="POST">
             <div class="form-group">
                 <label for="employeeID">Employee *</label>
                 <select id="employeeID" name="employeeID" required disabled>
@@ -60,8 +60,8 @@
             
             <div class="button-group">
                 <button type="submit" class="btn-primary">Update Training Record</button>
-                <a href="/employee-training/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>" class="btn-secondary">Cancel</a>
-                <a href="/employee-training" class="btn-secondary">Back to List</a>
+                <a href="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>" class="btn-secondary">Cancel</a>
+                <a href="/employeeTraining" class="btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
