--- a/views/forms/leaveRequest.ejs
+++ b/views/forms/leaveRequest.ejs
@@ -35,7 +35,7 @@
                     </div>
                 <% } %>
 
-                <form method="POST" action="/leave-request/add" class="form">
+                <form method="POST" action="/leaveRequest/add" class="form">
                     <div class="form-group">
                         <label for="employeeId">Employee *</label>
                         <select id="employeeId" name="employeeId" required>
