--- a/views/forms/trainingEdit.ejs
+++ b/views/forms/trainingEdit.ejs
@@ -14,7 +14,7 @@
             <div class="error-message"><%= error %></div>
         <% } %>
         
-        <form action="/trainings/<%= training.TrainingID %>/edit" method="POST">
+        <form action="/training<%= training.TrainingID %>/edit" method="POST">
             <div class="form-group">
                 <label for="sessionTitle">Session Title *</label>
                 <input type="text" id="sessionTitle" name="sessionTitle" value="<%= training.SessionTitle %>" required>
@@ -37,8 +37,8 @@
             
             <div class="button-group">
                 <button type="submit" class="btn-primary">Update Training Session</button>
-                <a href="/trainings/<%= training.TrainingID %>" class="btn-secondary">Cancel</a>
-                <a href="/trainings" class="btn-secondary">Back to List</a>
+                <a href="/training<%= training.TrainingID %>" class="btn-secondary">Cancel</a>
+                <a href="/training" class="btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
