--- a/views/view/employeeTrainings.ejs
+++ b/views/view/employeeTrainings.ejs
@@ -11,7 +11,7 @@
         <h1>All Employee Training Records</h1>
         
         <div class="button-group">
-            <a href="/forms/employee-training" class="btn-primary">Add New Training Record</a>
+            <a href="/forms/employeeTraining" class="btn-primary">Add New Training Record</a>
             <a href="/" class="btn-secondary">Back to Home</a>
         </div>
         
@@ -29,16 +29,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <% employeeTrainings.forEach(et => { %>
+                    <% employeeTrainings.forEach(employeeTraining => { %>
                         <tr>
-                            <td><%= et.EmployeeName %> (ID: <%= et.EmployeeID %>)</td>
-                            <td><%= et.SessionTitle %> (ID: <%= et.TrainingID %>)</td>
-                            <td><%= et.CompletionDate ? et.CompletionDate.toISOString().split('T')[0] : 'Not Completed' %></td>
-                            <td><%= et.Grade || 'N/A' %></td>
+                            <td><%= employeeTraining.EmployeeName %> (ID: <%= employeeTraining.EmployeeID %>)</td>
+                            <td><%= employeeTraining.SessionTitle %> (ID: <%= employeeTraining.TrainingID %>)</td>
+                            <td><%= employeeTraining.CompletionDate ? employeeTraining.CompletionDate.toISOString().split('T')[0] : 'Not Completed' %></td>
+                            <td><%= employeeTraining.Grade || 'N/A' %></td>
                             <td class="action-buttons">
-                                <a href="/employee-training/<%= et.EmployeeID %>/<%= et.TrainingID %>" class="btn-view">View</a>
-                                <a href="/employee-training/<%= et.EmployeeID %>/<%= et.TrainingID %>/edit" class="btn-edit">Edit</a>
-                                <a href="/employee-training/<%= et.EmployeeID %>/<%= et.TrainingID %>/delete" class="btn-delete">Delete</a>
+                                <a href="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>" class="btn-view">View</a>
+                                <a href="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/edit" class="btn-edit">Edit</a>
+                                <a href="/employeeTraining/<%= employeeTraining.EmployeeID %>/<%= employeeTraining.TrainingID %>/delete" class="btn-delete">Delete</a>
                             </td>
                         </tr>
                     <% }) %>
@@ -48,3 +48,5 @@
     </div>
 </body>
 </html>
+
+
