--- a/views/view/employees.ejs
+++ b/views/view/employees.ejs
@@ -11,7 +11,7 @@
         <h1>All Employees</h1>
         
         <div class="button-group">
-            <a href="/forms/employee" class="btn-primary">Add New Employee</a>
+            <a href="/employee/add" class="btn-primary">Add New Employee</a>
             <a href="/" class="btn-secondary">Back to Home</a>
         </div>
         
@@ -40,9 +40,9 @@
                             <td><%= emp.JobTitle %></td>
                             <td><span class="status-badge status-<%= emp.Status.toLowerCase().replace(' ', '-') %>"><%= emp.Status %></span></td>
                             <td class="action-buttons">
-                                <a href="/employees/<%= emp.EmployeeID %>" class="btn-view">View</a>
-                                <a href="/employees/<%= emp.EmployeeID %>/edit" class="btn-edit">Edit</a>
-                                <a href="/employees/<%= emp.EmployeeID %>/delete" class="btn-delete">Delete</a>
+                                <a href="/employee/<%= emp.EmployeeID %>" class="btn-view">View</a>
+                                <a href="/employee/<%= emp.EmployeeID %>/edit" class="btn-edit">Edit</a>
+                                <a href="/employee/<%= emp.EmployeeID %>/delete" class="btn-delete">Delete</a>
                             </td>
                         </tr>
                     <% }) %>
