--- a/views/view/evaluationDelete.ejs
+++ b/views/view/evaluationDelete.ejs
@@ -41,11 +41,11 @@
             </div>
         </div>
         
-        <form action="/evaluations/<%= evaluation.EvaluationID %>/delete" method="POST">
+        <form action="/evaluation/<%= evaluation.EvaluationID %>/delete" method="POST">
             <div class="button-group">
                 <button type="submit" class="btn-delete">Confirm Delete</button>
-                <a href="/evaluations/<%= evaluation.EvaluationID %>" class="btn-secondary">Cancel</a>
-                <a href="/evaluations" class="btn-secondary">Back to List</a>
+                <a href="/evaluation/<%= evaluation.EvaluationID %>" class="btn-secondary">Cancel</a>
+                <a href="/evaluation" class="btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
