--- a/views/view/evaluationDetails.ejs
+++ b/views/view/evaluationDetails.ejs
@@ -43,9 +43,9 @@
         </div>
         
         <div class="button-group">
-            <a href="/evaluations/<%= evaluation.EvaluationID %>/edit" class="btn-primary">Edit</a>
-            <a href="/evaluations/<%= evaluation.EvaluationID %>/delete" class="btn-delete">Delete</a>
-            <a href="/evaluations" class="btn-secondary">Back to List</a>
+            <a href="/evaluation/<%= evaluation.EvaluationID %>/edit" class="btn-primary">Edit</a>
+            <a href="/evaluation/<%= evaluation.EvaluationID %>/delete" class="btn-delete">Delete</a>
+            <a href="/evaluation" class="btn-secondary">Back to List</a>
         </div>
     </div>
 </body>
