--- a/views/view/evaluations.ejs
+++ b/views/view/evaluations.ejs
@@ -11,7 +11,7 @@
         <h1>All Performance Evaluations</h1>
         
         <div class="button-group">
-            <a href="/forms/evaluation" class="btn-primary">Add New Evaluation</a>
+            <a href="/evaluation/add" class="btn-primary">Add New Evaluation</a>
             <a href="/" class="btn-secondary">Back to Home</a>
         </div>
         
@@ -38,9 +38,9 @@
                             <td><%= eval.EvaluationDate.toISOString().split('T')[0] %></td>
                             <td><strong><%= eval.Rating %></strong> / 5.0</td>
                             <td class="action-buttons">
-                                <a href="/evaluations/<%= eval.EvaluationID %>" class="btn-view">View</a>
-                                <a href="/evaluations/<%= eval.EvaluationID %>/edit" class="btn-edit">Edit</a>
-                                <a href="/evaluations/<%= eval.EvaluationID %>/delete" class="btn-delete">Delete</a>
+                                <a href="/evaluation/<%= eval.EvaluationID %>" class="btn-view">View</a>
+                                <a href="/evaluation/<%= eval.EvaluationID %>/edit" class="btn-edit">Edit</a>
+                                <a href="/evaluation/<%= eval.EvaluationID %>/delete" class="btn-delete">Delete</a>
                             </td>
                         </tr>
                     <% }) %>
