--- a/views/view/payrolls.ejs
+++ b/views/view/payrolls.ejs
@@ -11,7 +11,7 @@
         <h1>All Payroll Records</h1>
         
         <div class="button-group">
-            <a href="/forms/payroll" class="btn-primary">Add New Payroll Record</a>
+            <a href="/payroll/add" class="btn-primary">Add New Payroll Record</a>
             <a href="/" class="btn-secondary">Back to Home</a>
         </div>
         
