--- a/views/view/trainings.ejs
+++ b/views/view/trainings.ejs
@@ -11,7 +11,7 @@
         <h1>All Training Sessions</h1>
         
         <div class="button-group">
-            <a href="/forms/training" class="btn-primary">Add New Training Session</a>
+            <a href="/training/add" class="btn-primary">Add New Training Session</a>
             <a href="/" class="btn-secondary">Back to Home</a>
         </div>
         
@@ -36,9 +36,9 @@
                             <td><%= training.Instructor %></td>
                             <td><%= training.SessionDate.toISOString().split('T')[0] %></td>
                             <td class="action-buttons">
-                                <a href="/trainings/<%= training.TrainingID %>" class="btn-view">View</a>
-                                <a href="/trainings/<%= training.TrainingID %>/edit" class="btn-edit">Edit</a>
-                                <a href="/trainings/<%= training.TrainingID %>/delete" class="btn-delete">Delete</a>
+                                <a href="/training<%= training.TrainingID %>" class="btn-view">View</a>
+                                <a href="/training<%= training.TrainingID %>/edit" class="btn-edit">Edit</a>
+                                <a href="/training<%= training.TrainingID %>/delete" class="btn-delete">Delete</a>
                             </td>
                         </tr>
                     <% }) %>
